# caiani2

./: Makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/baseline/: summary_mc.csv
artifacts/golden_java/: params_extracted.json  repro_check.txt
artifacts/smoke/: fm_residuals.csv  timeline.csv
ci/: smoke_log.txt
docs/: backlog.md  java_wsl_setup.md  oracle_local_run.md
reports/: baseline_parity.md  executor_round_01.md  executor_round_02.md  executor_round_03.md  executor_round_04.md  executor_round_05.md  executor_round_06.md  executor_round_07.md  executor_round_08.md  executor_round_09.md  executor_round_10.md  executor_round_11.md  executor_round_12.md  executor_round_13.md  executor_round_14.md  headers_mapping.md  params_mapping.md
s120_inequality_innovation/: __init__.py
s120_inequality_innovation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
s120_inequality_innovation/config/: param_map.yaml  params_default.yaml  seeds.yaml
s120_inequality_innovation/core/: flowmatrix_glue.py  registry.py  rng.py  scheduler.py  slice1_engine.py  slice2_engine.py  slice3_engine.py
s120_inequality_innovation/io/: golden_compare.py  metrics.py  plots.py  writer.py
s120_inequality_innovation/mc/: __main__.py  runner.py  slice1_runner.py  slice2_runner.py  slice3_runner.py  sweeps.py
s120_inequality_innovation/oracle/: README.md  classpath.txt  cli.py  extract_params.py  jpype_harness.py  (+1 more)
scripts/: golden_guard.py
tests/: test_flowmatrix_consistency.py  test_params.py  test_parity_baseline.py  test_scheduler_19steps.py
(+445 files in other folders)
